app/static/css/main.css
body {
    /*background: #f4f4f4*/
    background-image: url("../img/background_img.jpg");
}

#footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   height: 40px;
   padding: 5px;
}

#card-message {
    width: 30%;
    margin:auto;
}

.background-footer {
    background: #212529;
    text-align: center;
}

.text-footer {
    color: #db0b0b;
}

.center {
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

#content {
    /*margin-top: 45px;*/
    margin: 45px 10px 40px 10px;
}

div button {
    display: inline-block;
}

.modal-progress-bar {
    margin-left: 10px;
    margin-right: 10px;
    margin-bottom: 5px;
}

.data-display-background {
    background-color: #f4f4f4;
    padding: 2px;
}

.div-home-page {
    width: 750px;
    height: 250px;
    position: absolute;
    top: 45%;
    left: 25%;
    margin: -50px 0 0 -50px;
}


.homepage-p {
    font-size: 20px;
}

